--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VerkehrszählerMitRoom">
-        <activity android:name=".activities.ZaehlerAnlegenActivity"></activity>
+        <activity android:name=".activities.ZaehlenActivity"></activity>
+        <activity android:name=".activities.ZaehlerAnlegenActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
